changed documentation to try something out.

--- a/document.tex
+++ b/document.tex
@@ -29,7 +29,7 @@
 % \listoftables
 % \newpage
 
-% include the different sections
+% include the different sections here. every section should go into its own file.
   \input{./tex/abstract.tex}
   \input{./tex/backround.tex}
   \input{./tex/introduction.tex}
