fix: headers didn't show up in TOC

--- a/boilerp.sty
+++ b/boilerp.sty
@@ -15,7 +15,7 @@
 % table of contents
 \usepackage[titletoc]{appendix} % include appendices in TOC
 \usepackage[nottoc,numbib]{tocbibind} % include References in TOC
-\usepackage{tocloft}
+\usepackage[titles]{tocloft}
 \usepackage{caption}
 \usepackage{placeins}
 \renewcommand{\cftsecleader}{\cftdotfill{\cftdotsep}} % Add dots to TOC
